// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GCP AP form fill form 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group"
              data-id="region-0"
            >
              <label
                class="bp3-label"
                for="region"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_region"
                >
                  regionLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="region"
                        placeholder="- pipeline.regionPlaceholder -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="zone-1"
            >
              <label
                class="bp3-label"
                for="zone"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_zone"
                >
                  ce.co.accessPoint.zone
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="zone"
                        placeholder="- ce.co.accessPoint.select.zone -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group"
              data-id="vpc-2"
            >
              <label
                class="bp3-label"
                for="vpc"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_vpc"
                >
                  ce.co.accessPoint.vpcLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="vpc"
                        placeholder="- ce.co.accessPoint.select.vpc -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="securityGroups-3"
            >
              <label
                class="bp3-label"
                for="securityGroups"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_securityGroups"
                >
                  ce.co.accessPoint.securityGroupsLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            name="securityGroups"
                            placeholder="- Select -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group"
              data-id="subnet_name-4"
            >
              <label
                class="bp3-label"
                for="subnet_name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_subnet_name"
                >
                  ce.co.accessPoint.subnet
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="subnet_name"
                        placeholder="- ce.co.accessPoint.select.subnet -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="machine_type-5"
            >
              <label
                class="bp3-label"
                for="machine_type"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_machine_type"
                >
                  ce.co.accessPoint.machineType
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="machine_type"
                        placeholder="- ce.co.accessPoint.select.machineType -"
                        style="padding-right: 0px;"
                        type="text"
                        value="a2-highgpu-1g"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
            style="margin-top: 220px;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
              data-testid="previousButton"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Save Load Balancer
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`GCP AP form form in edit mode 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group bp3-disabled"
              data-id="region-0"
            >
              <label
                class="bp3-label"
                for="region"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_region"
                >
                  regionLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="region"
                        placeholder="- pipeline.regionPlaceholder -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="zone-1"
            >
              <label
                class="bp3-label"
                for="zone"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_zone"
                >
                  ce.co.accessPoint.zone
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="zone"
                        placeholder="- ce.co.accessPoint.select.zone -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group bp3-disabled"
              data-id="vpc-2"
            >
              <label
                class="bp3-label"
                for="vpc"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_vpc"
                >
                  ce.co.accessPoint.vpcLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="vpc"
                        placeholder="- ce.co.accessPoint.select.vpc -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="securityGroups-3"
            >
              <label
                class="bp3-label"
                for="securityGroups"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_securityGroups"
                >
                  ce.co.accessPoint.securityGroupsLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <span
                            class="bp3-tag MultiSelect--tag"
                            data-tag-index="0"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              http-server
                            </span>
                          </span>
                          <input
                            autocomplete="off"
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            name="securityGroups"
                            placeholder="ce.co.accessPoint.select.securityGroups"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group bp3-disabled"
              data-id="subnet_name-4"
            >
              <label
                class="bp3-label"
                for="subnet_name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_subnet_name"
                >
                  ce.co.accessPoint.subnet
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="subnet_name"
                        placeholder="- ce.co.accessPoint.select.subnet -"
                        style="padding-right: 0px;"
                        type="text"
                        value="subnet-test"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="machine_type-5"
            >
              <label
                class="bp3-label"
                for="machine_type"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_machine_type"
                >
                  ce.co.accessPoint.machineType
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="machine_type"
                        placeholder="- ce.co.accessPoint.select.machineType -"
                        style="padding-right: 0px;"
                        type="text"
                        value="a2-highgpu-1g"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
            style="margin-top: 220px;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
              data-testid="previousButton"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Save Load Balancer
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`GCP AP form form while saving 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group bp3-disabled"
              data-id="region-0"
            >
              <label
                class="bp3-label"
                for="region"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_region"
                >
                  regionLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="region"
                        placeholder="- pipeline.regionPlaceholder -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="zone-1"
            >
              <label
                class="bp3-label"
                for="zone"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_zone"
                >
                  ce.co.accessPoint.zone
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="zone"
                        placeholder="- ce.co.accessPoint.select.zone -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group bp3-disabled"
              data-id="vpc-2"
            >
              <label
                class="bp3-label"
                for="vpc"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_vpc"
                >
                  ce.co.accessPoint.vpcLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="vpc"
                        placeholder="- ce.co.accessPoint.select.vpc -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="securityGroups-3"
            >
              <label
                class="bp3-label"
                for="securityGroups"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_securityGroups"
                >
                  ce.co.accessPoint.securityGroupsLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <span
                            class="bp3-tag MultiSelect--tag"
                            data-tag-index="0"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              http-server
                            </span>
                          </span>
                          <input
                            autocomplete="off"
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            name="securityGroups"
                            placeholder="ce.co.accessPoint.select.securityGroups"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group bp3-disabled"
              data-id="subnet_name-4"
            >
              <label
                class="bp3-label"
                for="subnet_name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_subnet_name"
                >
                  ce.co.accessPoint.subnet
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="subnet_name"
                        placeholder="- ce.co.accessPoint.select.subnet -"
                        style="padding-right: 0px;"
                        type="text"
                        value="subnet-test"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="machine_type-5"
            >
              <label
                class="bp3-label"
                for="machine_type"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_machine_type"
                >
                  ce.co.accessPoint.machineType
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="machine_type"
                        placeholder="- ce.co.accessPoint.select.machineType -"
                        style="padding-right: 0px;"
                        type="text"
                        value="a2-highgpu-1g"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
            style="margin-top: 220px;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
              data-testid="previousButton"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
              data-icon="spinner"
              style="align-self: center;"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 36 36"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                  stroke="currentColor"
                  stroke-dasharray="75,100"
                  stroke-linecap="round"
                  stroke-width="2.8"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                />
              </svg>
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`GCP AP form form with no data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group"
              data-id="region-0"
            >
              <label
                class="bp3-label"
                for="region"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_region"
                >
                  regionLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="region"
                        placeholder="- pipeline.regionPlaceholder -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="zone-1"
            >
              <label
                class="bp3-label"
                for="zone"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_zone"
                >
                  ce.co.accessPoint.zone
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="zone"
                        placeholder="- ce.co.accessPoint.select.zone -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group"
              data-id="vpc-2"
            >
              <label
                class="bp3-label"
                for="vpc"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_vpc"
                >
                  ce.co.accessPoint.vpcLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="vpc"
                        placeholder="- ce.co.accessPoint.select.vpc -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="securityGroups-3"
            >
              <label
                class="bp3-label"
                for="securityGroups"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_securityGroups"
                >
                  ce.co.accessPoint.securityGroupsLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            name="securityGroups"
                            placeholder="- Select -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main formFieldRow"
          >
            <div
              class="bp3-form-group"
              data-id="subnet_name-4"
            >
              <label
                class="bp3-label"
                for="subnet_name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_subnet_name"
                >
                  ce.co.accessPoint.subnet
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="subnet_name"
                        placeholder="- ce.co.accessPoint.select.subnet -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="machine_type-5"
            >
              <label
                class="bp3-label"
                for="machine_type"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="lbFormSecond_machine_type"
                >
                  ce.co.accessPoint.machineType
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="machine_type"
                        placeholder="- ce.co.accessPoint.select.machineType -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
            style="margin-top: 220px;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
              data-testid="previousButton"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Save Load Balancer
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
